# testGeneratePatterns

./: CMakeLists.txt  TestMale.glb  main.cpp
AbstractFactory/include/: pizzaa.h  pizzaingridientfactory.h
AbstractFactory/src/: pizzaa.cpp
SimpleFactory/include/: pizza.h  simplepizzafactory.h
SimpleFactory/src/: pizza.cpp
src/: main.cpp  simplepizzafactory.cpp  simplepizzafactory.h
